feat: setup authentication concept
