# backend/dto/user_request.go
@@ -1,13 +1,23 @@
 package dto
 
-import "regexp"
+import (
+	"regexp"
+	"time"
+)
 
 type CreateUserRequest struct {
 	Name  string `json:"name" validate:"required"`
 	Email string `json:"email" validate:"required,email"`
 }
 
-// Validate implements custom validation for CreateUserRequest
+type UserResponse struct {
+	ID        uint      `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
 func (r CreateUserRequest) Validate() []string {
 	errs := []string{}
 	if matched, _ := regexp.MatchString(`[^a-zA-Z0-9 ]`, r.Name); matched {
